...
    val isClicked = remember { mutableStateOf(false) }

    val trailingIcon = if (isClicked.value) R.drawable.visibility_off else R.drawable.visibility_on

    TextField(value = value,
        onValueChange = { onChange.value = it },
        label = { Text(text = "Password", style = TextStyle(fontWeight = FontWeight.Normal, fontFamily = roboto)) },
        leadingIcon = { Icon(painter = painterResource(id = R.drawable.lock), contentDescription = value, modifier = modifier.size(25.dp)) },
        trailingIcon = { Icon(painter = painterResource(id = trailingIcon), contentDescription = value, modifier = modifier.size(25.dp).clickable { isClicked.value = !isClicked.value}) },
        modifier = modifier
//            .padding(10.dp)
            .width(340.dp),
        colors = TextFieldDefaults.textFieldColors(
...
